fix(NavDrawer): fix dark mode colors

--- a/packages/themes/src/morpheme/_nav-drawer.dark.scss
+++ b/packages/themes/src/morpheme/_nav-drawer.dark.scss
@@ -1,12 +1,9 @@
 .dark {
   .nav-drawer {
-    --nav-drawer-bg-color: var(--color-gray-true-800);
-    --nav-drawer-text-color: var(--color-gray-true-200);
-    --nav-drawer-border-color: var(--color-gray-true-700);
-
-    /* variants */
     &-default {
       --nav-drawer-bg-color: var(--color-gray-true-800);
+      --nav-drawer-text-color: var(--color-gray-true-200);
+      --nav-drawer-border-color: var(--color-gray-true-700);
     }
   }
 }
